api: add backend metrics: ip, anonymity, location
